style: fix finish line overlapping controls

--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ header {
 
 .finish-line-marker {
     position: absolute;
-    right: 30px;
+    right: 20px;
     top: 0;
     bottom: 0;
     width: 10px;
